# Space-Geovision

./: .gitignore  LICENSE  LICENSE.txt  README.md  helpers.py  main.py  polygon_processor.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  styles.qss  ui.py
Test_images/: 2020-02-15-00_00_2020-02-15-23_59_Sentinel-2_L2A_True_color.tiff  2021-09-11-00_00_2021-09-11-23_59_Sentinel-1_IW_VV_VH_VV_(Raw).tiff
icons/: Pr_icon.tif
