[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-geovision"
version = "1.0.0"
description = "Integrated open-source platform for multi-modal remote sensing analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ismail Elkhrachy", email = "iaelkhrachy@nu.edu.sa"}
]
keywords = [
    "remote-sensing",
    "gis",
    "sar-processing",
    "change-detection",
    "machine-learning",
    "geospatial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "PyQt5>=5.15.0",
    "PyQtWebEngine>=5.15.0",
    "rasterio>=1.3.0",
    "geopandas>=0.14.0",
    "scikit-learn>=1.2.0",
    "scikit-image>=0.21.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "opencv-python>=4.8.0",
    "torch>=2.0.0",
    "folium>=0.14.0",
    "leafmap>=0.25.0",
    "whitebox>=2.3.0",
    "shapely>=2.0.0",
    "pyproj>=3.5.0",
]

[project.urls]
"Homepage" = "https://github.com/ismaelelkhrachy/space-geovision"
"Bug Reports" = "https://github.com/ismaelelkhrachy/space-geovision/issues"
"Source" = "https://github.com/ismaelelkhrachy/space-geovision"

[project.scripts]
space-geovision = "main:main"

[tool.setuptools.packages.find]
include = ["space_geovision*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=space_geovision --cov-report=html"