[metadata]
name = space-geovision
version = 1.0.0
description = Integrated open-source platform for remote sensing analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ismaelelkhrachy/space-geovision
author = Ismail Elkhrachy
author_email = iaelkhrachy@nu.edu.sa
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.9
packages = find:
zip_safe = False

[options.extras_require]
dev = 
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist

[isort]
profile = black
line_length = 120

[mypy]
ignore_missing_imports = True